--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
 
     <div class="main-container">
         <div class="aside">
-            Orlando
+            <!--logo-->
+            <div class="logo">
+                <a href="#">Orlando</a>
+            </div>
+            <!--#logo-->
+            <!--nav-->
+            <ul class="nav">
+                <li ><a href="#"><i class="fa fa-home"></i>Home</a></li>
+            </ul>
+            <!--#nav-->
         </div>
         <!-- Aside end-->
         <!-- Main Content-->
         <div class="main-content">
             <div class="home section">
-
+                
             </div>
         </div>
         <!--#Main Content end-->
