--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
 
-    <title>Portafolo2</title>
+    <title>Portafolio-CV</title>
 </head>
 <body>
     <!-- Main container-->
@@ -20,9 +20,17 @@
             <!--#logo-->
             <!--nav-->
             <ul class="nav">
-                <li ><a href="#"><i class="fa fa-home"></i>Home</a></li>
+                <li ><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li ><a href="#"><i class="fa fa-user"></i> About</a></li>
+                <li ><a href="#"><i class="fa fa-list"></i> Services</a></li>
+                <li ><a href="#"><i class="fa fa-briefcase"></i> Portafolio</a></li>
+                <li ><a href="#"><i class="fa fa-envelope"></i> Blog</a></li>
+                <li ><a href="#"><i class="fa fa-comments"></i> Contact</a></li>
             </ul>
             <!--#nav-->
+            <div class="copyright-text">
+                &copy; 2020 the WebSite Template
+            </div>
         </div>
         <!-- Aside end-->
         <!-- Main Content-->
