--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/pinks.css" type="text/css">
 
     <title>Portafolio-CV</title>
 </head>
@@ -20,7 +21,7 @@
             <!--#logo-->
             <!--nav-->
             <ul class="nav">
-                <li ><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li ><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
                 <li ><a href="#"><i class="fa fa-user"></i> About</a></li>
                 <li ><a href="#"><i class="fa fa-list"></i> Services</a></li>
                 <li ><a href="#"><i class="fa fa-briefcase"></i> Portafolio</a></li>
