--- a/index.html
+++ b/index.html
@@ -19,26 +19,37 @@
                 <a href="#">Orlando</a>
             </div>
             <!--#logo-->
+            <div class="nav-toggler"><span></span></div>
             <!--nav-->
             <ul class="nav">
-                <li ><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
-                <li ><a href="#"><i class="fa fa-user"></i> About</a></li>
-                <li ><a href="#"><i class="fa fa-list"></i> Services</a></li>
-                <li ><a href="#"><i class="fa fa-briefcase"></i> Portafolio</a></li>
-                <li ><a href="#"><i class="fa fa-envelope"></i> Blog</a></li>
-                <li ><a href="#"><i class="fa fa-comments"></i> Contact</a></li>
+                <li ><a href="#" class="active"><i class="fa fa-home"></i> Perfil</a></li>
+                <li ><a href="#"><i class="fa fa-user"></i> Informacion Personal</a></li>
+                <li ><a href="#"><i class="fa fa-list"></i>Formacion Academica</a></li>
+                <li ><a href="#"><i class="fa fa-briefcase"></i> Habilidades</a></li>
+                <li ><a href="#"><i class="fa fa-envelope"></i> Portafolio</a></li>
+                <li ><a href="#"><i class="fa fa-comments"></i> Experiencia laboral</a></li>
+                <li ><a href="#"><i class="fa fa-comments"></i> Referencias laborales</a></li>
             </ul>
-            <!--#nav-->
+            <!--Copyright-->
             <div class="copyright-text">
-                &copy; 2020 the WebSite Template
+                &copy; 2020 Portafolio virtual Website
             </div>
         </div>
         <!-- Aside end-->
+
         <!-- Main Content-->
         <div class="main-content">
-            <div class="home section">
-                
-            </div>
+            <!-- Home Section -->
+            <section class="home section">
+                <div class="container">
+                    <div class="intro">
+                        <img src="./assets/images/perfil.jpg" alt="profile">
+                        <h1>Orlando Chavez de la cruz</h1>
+                        <p>Im a Analistra programador</p>
+                    </div>
+                </div>
+            </section>
+            <!--#Home Section -->
         </div>
         <!--#Main Content end-->
     </div>
